--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pysiogame (4.20.01-1) focal; urgency=medium
+
+  * Focal backport
+
+ -- M.Angel Juan <m.angel.juan@gmail.com>  Mon, 07 Mar 2022 10:26:22 +0100
+
 pysiogame (4.20.01-1) unstable; urgency=medium
 
   * New upstream release.
